--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gatsby-starter-default",
   "description": "Gatsby default starter",
   "version": "1.0.0",
+  "homepage": "https://kokobeen.github.io/joseph-honess-portfolio",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.277",
@@ -15,6 +16,8 @@
   ],
   "license": "MIT",
   "scripts": {
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
